src/input/snapshots/jiq__input__input_render__input_render_tests__snapshot_input_field_empty_insert_mode.snap
---
source: src/input/input_render_tests.rs
expression: output
---
"┌ Query [INSERT] ─────────────────────────────── Press Ctrl+A for AI Assistant ┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
