src/input/snapshots/jiq__input__input_render__input_render_tests__snapshot_input_field_narrow.snap
---
source: src/input/input_render_tests.rs
expression: output
---
"┌ Query [INSERT] rl+A for AI Assistant ┐"
"│.name                                 │"
"└──────────────────────────────────────┘"
