src/input/snapshots/jiq__input__input_render__input_render_tests__snapshot_input_field_with_syntax_error.snap
---
source: src/input/input_render_tests.rs
expression: output
---
"┌ Query [INSERT] ⚠ Syntax Error (Ctrl+E to view) Press Ctrl+A for AI Assistant ┐"
"│.invalid[                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
